Code style & structure improved.

--- a/client-project/CMakeLists.txt
+++ b/client-project/CMakeLists.txt
@@ -3,9 +3,10 @@ cmake_minimum_required (VERSION 2.6)
 find_package (Qt4 REQUIRED)
 
 set (src_dir ../src)
-set (gltools_src_dir ${src_dir}/client/GLTools/src)   # TODO: exclude from project
+set (gltools_src_dir ${src_dir}/client/GLTools/src)
 
 include_directories (${QT_INCLUDES} ${src_dir} ${src_dir}/client/GLTools/include/)
+add_definitions (-DCLIENT_APP)
 
 set (Cubricate_client_SRCS ${src_dir}/client/main.cpp ${src_dir}/client/glwidget.cpp
      ${gltools_src_dir}/GLBatch.cpp  ${gltools_src_dir}/glew.cpp  ${gltools_src_dir}/GLShaderManager.cpp
@@ -14,4 +15,4 @@ qt4_automoc (${Cubricate_client_SRCS})
 add_executable (cubricate_client ${Cubricate_client_SRCS})
 target_link_libraries (cubricate_client ${QT_QTCORE_LIBRARY} ${QT_QTGUI_LIBRARY} QtOpenGL)
 
-set(CMAKE_CXX_FLAGS  "-std=gnu++0x -Wall -Wextra")
+set (CMAKE_CXX_FLAGS  "-std=gnu++0x -Wall -Wextra")
