--- a/server-project/CMakeLists.txt
+++ b/server-project/CMakeLists.txt
@@ -2,11 +2,13 @@ project (Cubricate_server)
 cmake_minimum_required (VERSION 2.6)
 find_package (Qt4 REQUIRED)
 
-include_directories (${QT_INCLUDES})
+set (src_dir ../src)
+
+include_directories (${QT_INCLUDES} ${src_dir})
 add_definitions (-DSERVER_APP)
 
-set (Cubricate_server_SRCS ../src/server/main.cpp)
+set (Cubricate_server_SRCS ${src_dir}/server/main.cpp ${src_dir}/common/world_chunk.cpp ${src_dir}/common/world_map.cpp)
 add_executable (cubricate_server ${Cubricate_server_SRCS})
-target_link_libraries (cubricate_server ${QT_QTCORE_LIBRARY})
+target_link_libraries (cubricate_server ${QT_QTTEST_LIBRARY} ${QT_QTNETWORK_LIBRARY})
 
 set (CMAKE_CXX_FLAGS  "-std=gnu++0x -Wall -Wextra")
