GLTools are nearly removed from the project: the shader compilation and texture loading are now done by Qt, vectors from math3d are replaced with ones from linear_algebra.hpp (matrix classes are not written yet), GLFrame is ``rewritten'' in player.hpp. So, only GLFrustum and a part of math3d are still used.

--- a/client-project/CMakeLists.txt
+++ b/client-project/CMakeLists.txt
@@ -3,15 +3,13 @@ cmake_minimum_required (VERSION 2.6)
 find_package (Qt4 REQUIRED)
 
 set (src_dir ../src)
-set (gltools_src_dir ${src_dir}/client/GLTools/src)
 
-include_directories (${QT_INCLUDES} ${src_dir} ${src_dir}/client/GLTools/include/)
+include_directories (${QT_INCLUDES} ${src_dir})
 add_definitions (-DCLIENT_APP)
 
 set (Cubricate_client_SRCS ${src_dir}/client/main.cpp ${src_dir}/client/client_world.cpp ${src_dir}/client/glwidget.cpp
      ${src_dir}/common/world_chunk.cpp ${src_dir}/common/world_map.cpp ${src_dir}/common/player.cpp
-     ${gltools_src_dir}/GLBatch.cpp  ${gltools_src_dir}/glew.cpp  ${gltools_src_dir}/GLShaderManager.cpp
-     ${gltools_src_dir}/GLTools.cpp  ${gltools_src_dir}/GLTriangleBatch.cpp  ${gltools_src_dir}/math3d.cpp)
+    ${src_dir}/client/GLTools/math3d.cpp)
 qt4_automoc (${Cubricate_client_SRCS})
 add_executable (cubricate_client ${Cubricate_client_SRCS})
 target_link_libraries (cubricate_client ${QT_QTCORE_LIBRARY} ${QT_QTGUI_LIBRARY} ${QT_QTOPENGL_LIBRARY})
