It's now possible to destroy & place new cubes via left & right mouse buttons.

--- a/server-project/CMakeLists.txt
+++ b/server-project/CMakeLists.txt
@@ -7,7 +7,8 @@ set (src_dir ../src)
 include_directories (${QT_INCLUDES} ${src_dir})
 add_definitions (-DSERVER_APP)
 
-set (Cubricate_server_SRCS ${src_dir}/server/main.cpp ${src_dir}/common/world_chunk.cpp ${src_dir}/common/world_map.cpp ${src_dir}/common/player.cpp)
+set (Cubricate_server_SRCS ${src_dir}/server/main.cpp ${src_dir}/server/server_world.cpp
+                           ${src_dir}/common/world_chunk.cpp ${src_dir}/common/world_map.cpp ${src_dir}/common/player.cpp)
 add_executable (cubricate_server ${Cubricate_server_SRCS})
 target_link_libraries (cubricate_server ${QT_QTTEST_LIBRARY} ${QT_QTNETWORK_LIBRARY})
 
