--- a/client-project/CMakeLists.txt
+++ b/client-project/CMakeLists.txt
@@ -1,11 +1,11 @@
-project (Cubricate_client)
+ project (Cubricate_client)
 cmake_minimum_required (VERSION 2.6)
 find_package (Qt4 REQUIRED)
 
 set (src_dir ../src)
 set (resource_dir ../resources)
 
-include_directories (${QT_INCLUDES} ${src_dir})
+include_directories (${QT_INCLUDES} ${src_dir} ${src_dir}/client/GLTools/include)
 add_definitions (-DCLIENT_APP)
 
 
@@ -13,14 +13,14 @@ set (Cubricate_client_SRCS ${src_dir}/client/main.cpp ${src_dir}/client/client_w
      ${src_dir}/client/visible_cube_set.cpp ${src_dir}/client/glwidget.cpp
      ${src_dir}/common/world_chunk.cpp ${src_dir}/common/world_map.cpp ${src_dir}/common/simple_world_map.cpp
      ${src_dir}/common/simple_light_map.cpp ${src_dir}/common/player.cpp ${src_dir}/common/physics/water_engine.cpp
-     ${src_dir}/client/octree.cpp ${src_dir}/client/GLTools/math3d.cpp)
+     ${src_dir}/client/octree.cpp ${src_dir}/client/GLTools/math3d.cpp ${src_dir}/client/GLTools/GLShaderLoader.cpp)
 
 qt4_automoc (${Cubricate_client_SRCS})
 
 add_custom_target (shaders)
 add_executable (cubricate_client ${Cubricate_client_SRCS})
 add_dependencies (cubricate_client shaders)
-target_link_libraries (cubricate_client ${QT_QTCORE_LIBRARY} ${QT_QTGUI_LIBRARY} ${QT_QTOPENGL_LIBRARY})
+target_link_libraries (cubricate_client sfml-window ${QT_QTCORE_LIBRARY} ${QT_QTGUI_LIBRARY} ${QT_QTOPENGL_LIBRARY})
 
 add_custom_command (TARGET shaders PRE_BUILD
                     COMMAND ../build_shaders.sh)
