The project has switched to my macro processor (instead of m4).

--- a/client-project/CMakeLists.txt
+++ b/client-project/CMakeLists.txt
@@ -2,8 +2,11 @@ project (Cubricate_client)
 cmake_minimum_required (VERSION 2.6)
 find_package (Qt4 REQUIRED)
 
-set (src_dir ../src)
-set (resource_dir ../resources)
+set (project_root ${CMAKE_SOURCE_DIR}/..)
+set (src_dir ${project_root}/src)
+set (resource_dir ${project_root}/resources)
+
+add_subdirectory (${project_root}/utils/Macro_processor ${project_root}/utils/Macro_processor/build)
 
 include_directories (${QT_INCLUDES} ${src_dir} ${src_dir}/client/GLTools/include)
 add_definitions (-DCLIENT_APP)
@@ -17,13 +20,11 @@ set (Cubricate_client_SRCS ${src_dir}/client/main.cpp ${src_dir}/client/client_w
 
 qt4_automoc (${Cubricate_client_SRCS})
 
-add_custom_target (shaders)
 add_executable (cubricate_client ${Cubricate_client_SRCS})
-add_dependencies (cubricate_client shaders)
 target_link_libraries (cubricate_client sfml-window ${QT_QTCORE_LIBRARY} ${QT_QTGUI_LIBRARY} ${QT_QTOPENGL_LIBRARY})
 
-add_custom_command (TARGET shaders PRE_BUILD
-                    COMMAND ../build_shaders.sh)
+add_custom_target (shaders ALL ../build_shaders.sh)
+add_dependencies (shaders macro_processor)
 
 set (CMAKE_CXX_FLAGS  "-std=gnu++0x -Wall -Wextra")
 set (CMAKE_CXX_FLAGS_DEBUG "-g -DENABLE_DEBUG_PRINTING")
